[gd_scene load_steps=5 format=3 uid="uid://cuuql0xewi8qi"]

[ext_resource type="Script" path="res://game/ui/windows/inventory_window.gd" id="1_kyqw0"]
[ext_resource type="LabelSettings" uid="uid://bn5s2aya1hh01" path="res://game/ui/windows/game_font_settings.tres" id="3_1u12d"]
[ext_resource type="FontFile" uid="uid://lse3hwyswnc" path="res://assets/Sprout Lands - UI Pack - Premium pack/fonts/pixelFont-7-8x14-sproutLands.ttf" id="3_f7g2p"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_uxvp2"]
bg_color = Color(0.2, 0.2, 0.2, 0.8)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[node name="InventoryWindow" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_kyqw0")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -200.0
offset_right = 300.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_uxvp2")

[node name="TitleBar" type="Control" parent="Panel"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 40.0
grow_horizontal = 2

[node name="Title" type="Label" parent="Panel/TitleBar"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -50.0
offset_top = 10.0
offset_right = 50.0
offset_bottom = 33.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("3_f7g2p")
theme_override_font_sizes/font_size = 24
text = "bag"
label_settings = ExtResource("3_1u12d")
horizontal_alignment = 1

[node name="CloseButton" type="Button" parent="Panel/TitleBar"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -40.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = 30.0
grow_horizontal = 0
text = "X"

[node name="TabContainer" type="TabContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 50.0
offset_right = -10.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2
current_tab = 0

[node name="All" type="MarginContainer" parent="Panel/TabContainer"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5
metadata/_tab_index = 0

[node name="GridContainer" type="GridContainer" parent="Panel/TabContainer/All"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/h_separation = 5
theme_override_constants/v_separation = 5
columns = 5

[node name="Tools" type="MarginContainer" parent="Panel/TabContainer"]
visible = false
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10
metadata/_tab_index = 1

[node name="GridContainer" type="GridContainer" parent="Panel/TabContainer/Tools"]
layout_mode = 2
theme_override_constants/h_separation = 10
theme_override_constants/v_separation = 10
columns = 5

[node name="Res" type="MarginContainer" parent="Panel/TabContainer"]
visible = false
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10
metadata/_tab_index = 2

[node name="GridContainer" type="GridContainer" parent="Panel/TabContainer/Res"]
layout_mode = 2
theme_override_constants/h_separation = 10
theme_override_constants/v_separation = 10
columns = 5

[node name="Weapons" type="MarginContainer" parent="Panel/TabContainer"]
visible = false
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10
metadata/_tab_index = 3

[node name="GridContainer" type="GridContainer" parent="Panel/TabContainer/Weapons"]
layout_mode = 2
theme_override_constants/h_separation = 10
theme_override_constants/v_separation = 10
columns = 5

[node name="ItemTooltip" type="Panel" parent="."]
visible = false
layout_mode = 0
offset_right = 200.0
offset_bottom = 120.0

[node name="VBoxContainer" type="VBoxContainer" parent="ItemTooltip"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2

[node name="ItemName" type="Label" parent="ItemTooltip/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_f7g2p")
theme_override_font_sizes/font_size = 16
text = "name"
label_settings = ExtResource("3_1u12d")

[node name="HSeparator" type="HSeparator" parent="ItemTooltip/VBoxContainer"]
layout_mode = 2

[node name="ItemType" type="Label" parent="ItemTooltip/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_f7g2p")
theme_override_font_sizes/font_size = 12
text = "Type"
label_settings = ExtResource("3_1u12d")

[node name="ItemDescription" type="Label" parent="ItemTooltip/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_f7g2p")
theme_override_font_sizes/font_size = 12
text = "description"
label_settings = ExtResource("3_1u12d")
autowrap_mode = 3

[connection signal="pressed" from="Panel/TitleBar/CloseButton" to="." method="_on_close_button_pressed"]
